InnoDB locking code debug helpers [MDEV-18706]

Related to:
MDEV-18706 ER_LOCK_DEADLOCK on concurrent read and insert into already locked gap

=== Dependency hints (auto-detected by git-deps) ===
ca2816d7fc1 MDEV-18706 ER_LOCK_DEADLOCK on concurrent read and insert into already locked gap